[package]
name = "agent_simulateur"
version = "0.1.0"
edition = "2021"
authors = ["ENSPY Security Monitoring"]
description = "Agent Simulateur Rust du Data Center ENSPY"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
